fixed decimal , and time date dynamic feature

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@ OPP APEX BANK T. T. NAGAR BHOPAL (M.P.)</textarea>
                     </div>
                     <div>
                         <label for="billDate">Bill Date:</label>
-                        <input type="date" id="billDate" value="2025-08-21">
+                        <input type="date" id="billDate" placeholder="YYYY-MM-DD">
                     </div>
                     <div>
                         <label for="billTime">Bill Time:</label>
-                        <input type="time" id="billTime" value="13:00">
+                        <input type="time" id="billTime" placeholder="HH:MM">
                     </div>
                 </div>
             </div>
@@ -129,3 +129,4 @@ OPP APEX BANK T. T. NAGAR BHOPAL (M.P.)</textarea>
     <script src="script.js"></script>
 </body>
 </html>
+
